# arxiv-agent-crawler

./: .env.example  .gitignore  CLAUDE.md  PROMPT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.yml
prompts/: query_architect.yaml  synthesizer.yaml
src/: main.py  storage.py
src/agents/: architect.py  quality.py  searcher.py  state.py  synthesizer.py
src/api/: main.py
src/core/: embedding.py  engine.py  reranker.py
src/utils/: callbacks.py  llm.py  prompts.py
tests/: conftest.py
tests/evals/: golden_dataset.json
tests/unit/: test_architect.py  test_callbacks.py  test_engine.py  test_graph.py  test_quality.py  test_searcher.py  test_storage.py  test_synthesizer.py
ui/desktop/: details.py  main.py  theme.py  worker.py
ui/web/: app.js  index.html  style.css
